--- a/src/components/product-detail/productDetail.scss
+++ b/src/components/product-detail/productDetail.scss
@@ -12,6 +12,7 @@
   z-index: 999;
   border-radius: 10px;
   border: 1px solid #282e33;
+  padding: 30px;
 }
 
 .production__detail__exit {
@@ -31,4 +32,22 @@
   width: 100%;
   height: 100vh;
   background: rgba(255, 255, 255, 0.133);
+}
+
+.production__content {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.production__info {
+  font-size: 20px;
+  font-weight: 500;
+
+  span {
+    color: #4493f8;
+  }
 }
